assets/css/style.css
/* ... */
/* Small smartphones */
@media screen and (min-width: 374px) and (max-width: 576px) {
  header {
    flex-direction: column;
  }
  header h1 {
    font-size: 30px;
    display: inline;
    padding: 4px;
    border-left: 10px double black;
  }
  nav li {
    margin: 10px 5px;
  }
  nav {
    margin: 2px;
  }

  .text {
    background-color: black;
    color: white;
    font-size: 10px;
    padding: 4px 8px;
  }
  .backgroundimg {
    height: 100px;
  }
  .subheader {
    /* padding: 5px;
    font-size: 80%;
    right: 20%; */
    display: none;
  }
  .tooltip .tooltiptext {
    width: 120px;
    padding: 5px 0px;
    left: 40px;
    top: -40px;
  }
  .tooltipdesc {
    left: -70px;
    top: -75px;
    font-size: 12px;
  }

  .tooltipdescmini {
    left: -45px;
    top: -65px;
  }
  .aboutmesect {
    flex-direction: column;
    align-items: center;
  }
  .aboutmecontent {
    border-left: none;
    margin-top: 15px;
    flex-direction: column;
    align-items: center;
  }
  .profilepic {
    width: 35%;
    margin-bottom: 5%;
  }
  h3 {
    font-size: 150%;
    align-items: center;
    margin: 0 10px 0 0;
  }
  main {
    margin: 5px;
    overflow: hidden;
  }

  .imgpic {
    border-radius: 50%;
    width: 200px;
    height: 200px;
    object-fit: cover;
    object-position: top;
  }
  .worksect {
    flex-direction: column;
    align-items: center;
  }
  .workcontent {
    border-left: none;
    width: 90%;
  }
  .workimg {
    margin: 10px 0;
  }
  .homework2,
  .homework3 {
    height: 100px;
    width: 100px;
  }
  .mediascreenflex {
    display: flex;
    justify-content: center;
  }
  .aside {
    margin-left: 0;
    clear: both;
    float: none;
    width: 100%;
    height: 100%;
    text-align: center;
  }
  .homework1 {
    height: 200px;
    width: 75%;
  }

  h4 {
    font-size: 57%;
    padding: 5px;
  }
  .contactcontent {
    border-left: none;
    height: 50px;
    font-size: 50%;
    margin: 0;
  }
  p {
    font-size: 70%;
  }
  h4::after {
    width: 15px;
    height: 15px;
  }

  
}
@media screen and (max-width: 373px) {
  header {
    flex-direction: column;
  }
  header h1 {
    font-size: 30px;
    display: inline;
    padding: 4px;
    border-left: 10px double black;
  }
  nav li {
    margin: 10px 5px;
  }
  nav {
    margin: 2px;
  }
  .backgroundimg {
    height: 100px;
  }
  .subheader {
    /* padding: 5px;
    font-size: 80%;
    right: 20%; */
    display: none;
  }

  .aboutmesect {
    flex-direction: column;
    align-items: center;
  }
  .aboutmecontent {
    border-left: none;
    margin-top: 15px;
    flex-direction: column;
    align-items: center;
  }
  .profilepic {
    width: 35%;
    margin-bottom: 5%;
  }
  h3 {
    font-size: 150%;
    align-items: center;
    margin: 0 10px 0 0;
  }
  main {
    margin: 5px;
    overflow: hidden;
  }

  .imgpic {
    border-radius: 50%;
    width: 200px;
    height: 200px;
    object-fit: cover;
    object-position: top;
  }
  .worksect {
    flex-direction: column;
    align-items: center;
  }
  .workcontent {
    border-left: none;
    width: 90%;
  }
  .workimg {
    margin: 10px 0;
  }
  .homework2,
  .homework3 {
    height: 100px;
    width: 100px;
  }
  .mediascreenflex {
    display: flex;
    justify-content: center;
  }
  .aside {
    margin-left: 0;
    clear: both;
    float: none;
    width: 100%;
    height: 100%;
    text-align: center;
  }
  .homework1 {
    height: 200px;
    width: 75%;
  }

  h4 {
    font-size: 57%;
    padding: 5px;
  }
  .contactcontent {
    border-left: none;
    height: 50px;
    font-size: 50%;
    margin: 0;
    justify-content: end;
  }
  p {
    font-size: 70%;
  }
  h4::after {
    width: 15px;
    height: 15px;
  }
  .text {
    background-color: black;
    color: white;
    font-size: 10px;
    padding: 4px 8px;
  }

  .tooltip .tooltiptext {
    width: 120px;
    padding: 5px 1px;
    left: 5px;
    top: -40px;
  }
  .tooltipdesc {
    left: -60px;
    top: -68px;
    font-size: 10px;
    width: 250px;
  }
  .tooltipdescmini {
    width: 305px;
    left: -60px;
    top: -60px;
  }
}

